hello-app-folder/hello-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: hello-app-project
  name: hello-app-deploy
  namespace: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
        project: hello-app-project
    spec:
      containers:
      - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
        name: hello-app
        ports:
        - containerPort: 8080
