hello-app-folder/hello-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: hello-app
    task: test-update
  name: hello-app-5c9b7f89cc-zgs4b
  namespace: hello-app
spec:
  containers:
  - image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
    imagePullPolicy: IfNotPresent
    name: hello-app
    ports:
    - containerPort: 8080
