hello-app-folder/hello-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: hello-app
  name: hello-app
  namespace: hello-app
spec:
  ports:
  - port: 8010
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello-app
  sessionAffinity: None
  type: ClusterIP
