hello-app-folder/hello-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: hello-app
  labels:
    project: hello-app-project
spec:
  ingressClassName: nginx
  rules:
  - host: www.demo.io
    http:
      paths:
      - backend:
          service:
            name: hello-app
            port:
              number: 8010
        path: /hello-app
        pathType: Prefix
